--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main-cont{
+    overflow-x: hidden !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@media (min-width: 763px) and (max-width: 820px) {
+    /* .container-fluid {
+      padding-right: 5px;
+      padding-left: 5px;
+    } */
+    .main-cont{
+        width: 100vw !important;
+        margin-right: 0px !important;
+        overflow-x: hidden !important;
+    }
+  }
+  
+  @media (max-width: 420px) {
+    .header-title {
+      font-size: 1.5rem; /* Adjust font size as needed */
+    }
+    .main-cont{
+        width: 113vw !important;
+        overflow-x: hidden !important;
+    }
+    .inf{
+        width: 100vw !important;
+    }
+  }
+  
